Closed
Bug 28148
Opened 26 years ago
Closed 26 years ago
mac + linux: trying to change master passwd hangs seamonkey
Categories
(SeaMonkey :: Passwords & Permissions, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M14
People
(Reporter: bugzilla, Assigned: morse)
References
Details
Attachments
(1 file)
|
6.64 KB,
text/plain
|
Details |
this seems kinda similar to bug 28145, but am filing a separate bug since the
results differ from what i saw on linux. if it is the same problem, feel free
to dup.
to repro,
0. create a new profile, and launch seamonkey.
1. go to http://slip/projects/marvin/wallet/login.html.
2. enter squiddy/calamari, hit Login button.
3. when the Confirm dialog appears, click Yes to save the username/passwd.
4. when the Password dialog (with 2 input fields) appears asking for you to
enter a passwd, do so. i'd enter something simple like 222. then click OK.
5. during the same session, go to Tasks > Autofill > Change Password.
result: the menu goes away, but Tasks in the menubar remains highlighted. and
seamonkey hangs. i quit using MacsBug (will attach stack trace soon).
this occurred using both the comm and non-comm bits of 2000021608. i tried to
see what would happen on winNT (only non-comm bit usable), and i was able to
change my master passwd --however, i kept getting Dr Watson dialogs whenever i
quit (but, again, maybe a different issue altogether).
| Reporter | ||
Comment 1•26 years ago
|
||
Comment 2•26 years ago
|
||
Reproduced using today's verif build on MacOS 8.6, I get what looks like the
same stack. Those are wallet routines at the top though, not toolkit.
reassigning to morse
Assignee: trudelle → morse
| Reporter | ||
Updated•26 years ago
|
Component: XP Toolkit/Widgets → Single Signon
QA Contact: paulmac → sairuh
| Assignee | ||
Updated•26 years ago
|
| Assignee | ||
Comment 3•26 years ago
|
||
Have fix in hand. Awaiting code review and checkin approval.
| Assignee | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 4•26 years ago
|
||
Fix checked in. Change was in wallet.cpp.
| Assignee | ||
Comment 6•26 years ago
|
||
Same problem was occuring in linux and for the same reason. The linux bug has
now been marked as a dup of this one. Updating summary line to reflect this.
Summary: mac: trying to change master passwd hangs seamonkey → mac + linux: trying to change master passwd hangs seamonkey
| Reporter | ||
Comment 7•26 years ago
|
||
this is fine on mac and linux (2000021808, comm bits). ran into problems when i
tried this out on a whim on winNT (see bug 28442). verifying this one, however.
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•