bug 28148, change-password was downloading wallet tables, a=jar, r=dp, mactest=rjc